apps/sabnzbd/ingress-sabnzbd-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sabnzbd-tailscale
  namespace: media
  annotations:
    tailscale.com/tags: "tag:k8s-operator"
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: sabnzbd
      port:
        number: 8080
  tls:
    - hosts:
        - sabnzbd
